# task

./: .gitignore  CMakeLists.txt  README.md
src/: SymmetricSparseMatrices.cpp  SymmetricSparseMatrices.h  main.cpp
